--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "doctrine/orm": "*",
     "granam/strict-object": "dev-master",
     "doctrineum/entity": "dev-master",
-    "doctrineum/string": "dev-master"
+    "doctrineum/string": "dev-master",
+    "drd-plus/properties": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "dev-master",
