--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "require": {
     "php": ">=5.6.0",
     "roave/security-advisories": "dev-master",
-    "doctrine/orm": "*",
+    "doctrine/orm": "^2.5",
     "granam/strict-object": "dev-master",
     "doctrineum/entity": "dev-master",
     "doctrineum/string": "dev-master",
