--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7",
-    "mockery/mockery": "dev-master"
+    "mockery/mockery": "~0.9"
   },
   "minimum-stability": "dev",
   "prefer-stable": true
