--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     }
   },
   "require": {
-    "php": ">=5.6.0",
+    "php": ">=7.0",
     "roave/security-advisories": "dev-master",
     "doctrine/orm": ">=2.5",
     "granam/strict-object": "dev-master",
@@ -18,9 +18,9 @@
     "drd-plus/properties": "dev-master"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7",
+    "phpunit/phpunit": "~6.0",
     "mockery/mockery": "~0.9",
-    "granam/exceptions-hierarchy": "~3.0"
+    "granam/exceptions-hierarchy": "~4.0"
   },
   "minimum-stability": "dev",
   "prefer-stable": true
