--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,16 @@
   },
   "require": {
     "php": ">=7.1",
-    "roave/security-advisories": "dev-master",
     "doctrine/orm": ">=2.5",
-    "granam/strict-object": "dev-master",
-    "doctrineum/entity": "dev-master",
-    "doctrineum/string": "dev-master",
-    "drd-plus/properties": "dev-master"
+    "granam/strict-object": "^3.0",
+    "doctrineum/entity": "^2.1",
+    "doctrineum/string": "^2.1",
+    "drd-plus/properties": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~6.0",
-    "mockery/mockery": "~0.9",
+    "roave/security-advisories": "dev-master",
+    "phpunit/phpunit": "~7.0",
+    "mockery/mockery": "~1.0",
     "granam/exceptions-hierarchy": "~4.0"
   },
   "minimum-stability": "dev",
