--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "drdplus/equipment",
   "license": "MIT",
-  "type": "project",
+  "type": "library",
   "description": "Belongings for Drd+",
   "autoload": {
     "psr-4": {
@@ -21,7 +21,5 @@
     "phpunit/phpunit": "~7.0",
     "mockery/mockery": "~1.0",
     "granam/exceptions-hierarchy": "~4.0"
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true
+  }
 }
