--- a/composer.json
+++ b/composer.json
@@ -5,18 +5,27 @@
   "description": "Belongings for Drd+",
   "autoload": {
     "psr-4": {
-      "DrdPlus\\": "DrdPlus/"
+      "DrdPlus\\Equipment\\": "Equipment"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "DrdPlus\\Tests\\": "tests"
     }
   },
   "require": {
-    "php": ">=7.1",
+    "php": ">=7.3",
     "granam/string-enum": "~1.0",
     "drdplus/properties": "~2.0"
   },
   "require-dev": {
-    "roave/security-advisories": "dev-master",
-    "phpunit/phpunit": "~7.0",
+    "granam/exceptions-hierarchy": "~5.0",
+    "granam/test-with-mockery": "^2.0",
     "mockery/mockery": "~1.0",
-    "granam/exceptions-hierarchy": "~4.0"
+    "phpunit/phpunit": "~9.0",
+    "roave/security-advisories": "dev-master"
+  },
+  "config": {
+    "sort-packages": true
   }
 }
